# AlgoRun

./: .gitignore  ALGORITHMS.md  ARCHITECTURE.md  CLAUDE.md  GUIDELINES.md  README.md  STUDY_MAP.md  pyproject.toml  requirements-bench.txt  requirements.txt  train_intent.py
benchmarks/: test_validator.py  validator.py
collab/: HANDOFF.md
data/synthetic/: test.jsonl  train.jsonl  val.jsonl
docs/: PIPELINE.md  THEORY.md
ontology/: algorun.owl  build_genre_taxonomy.py  genres.ttl  shapes.ttl
report/: music_science.md  ontology_criteria.md  ontology_design.md  ontology_eval.md  ontology_logic.md
src/algorun/: controller.py  fusion.py  genre_graph.py  intent.py  light_validator.py  nlp.py  pipeline.py  refinery.py  scorer.py  sensor.py  validator.py
src/algorun/datagen/: generator.py  templates.py  validate.py
src/algorun/exam/: light_validator.py  refinery.py  shacl_gate.py
src/algorun/ontology/: evaluation.py  loader.py
src/algorun/sensors/: build_dataset.py  generate_simulated_bpm.py  gps.py  physiological_state.py
tests/: test_competency_questions.py  test_controller.py  test_datagen.py  test_fusion.py  test_genre_graph.py  test_gps.py  test_health_constraints.py  test_intent.py  test_light_validator.py  test_nlp.py  test_ontology.py  test_ontology_v2.py  test_pipeline.py  test_refinery.py  test_scorer.py  test_sensor.py  test_shacl_gate.py  test_validator.py
